--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,6 @@
 <!--
 =========================================================
-* Vue Argon Dashboard 2 - v4.0.0
+* Vue Inventario equipos - v4.0.0
 =========================================================
 
 * Product Page: https://creative-tim.com/product/vue-argon-dashboard
@@ -25,7 +25,7 @@ Coded by www.creative-tim.com
 
     <link rel="icon" href="<%= BASE_URL %>favicon.png" />
 
-    <title>Vue Argon Dashboard 2 by Creative Tim</title>
+    <title>Vue Inventario equipos by Creative Tim</title>
 
     <link
       href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700"
@@ -50,7 +50,7 @@ Coded by www.creative-tim.com
   <body class="bg-gray-100">
     <noscript>
       <strong>
-        We're sorry but Vue Argon Dashboard 2 doesn't work properly without
+        We're sorry but Vue Inventario equipos doesn't work properly without
         JavaScript enabled. Please enable it to continue.
       </strong>
     </noscript>
